Added Homepage and Bug-reports urls.
This will make it easier to get to the github pages from the Hackage index.

--- a/dbmigrations.cabal
+++ b/dbmigrations.cabal
@@ -21,6 +21,8 @@ Description:         A library and program for the creation,
 Category:            Database
 Author:              Jonathan Daugherty <cygnus@foobox.com>
 Maintainer:          Jonathan Daugherty <cygnus@foobox.com>
+homepage:            http://github.com/jtdaugherty/dbmigrations
+Bug-Reports:         http://github.com/jtdaugherty/dbmigrations/issues
 Build-Type:          Simple
 License:             BSD3
 License-File:        LICENSE
